--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.sigma.sportsup.ui.events.SearchFragment"
         android:label="@string/title_events"
         tools:layout="@layout/fragment_events" />
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.sigma.sportsup.ui.profile.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile"
+        />
 </navigation>
