Feat: Added get games from firebase

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,19 +53,27 @@
         android:scrollbars="horizontal"
         />
 
-   <!-- <com.google.android.material.tabs.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+     <com.google.android.material.tabs.TabLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         app:tabIndicatorFullWidth="false"
+         app:tabIndicatorAnimationMode="elastic"
+         app:tabContentStart="56dp"
+
+
+         >
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/invited_sessions"
+       android:contentDescription="@string/tab1"
             />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today_s_sessions"
+            android:contentDescription="@string/tab1"
             />
-    </com.google.android.material.tabs.TabLayout>-->
+    </com.google.android.material.tabs.TabLayout>
 </LinearLayout>
