--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,17 @@
     android:layout_marginBottom="16dp"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/ivProfilePic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/circle_background"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/tvName"
         android:layout_width="match_parent"
