--- a/app/src/main/res/layout/event_recyclerview_item.xml
+++ b/app/src/main/res/layout/event_recyclerview_item.xml
@@ -67,6 +67,7 @@
                   android:textAppearance="?attr/textAppearanceBodyMedium"
                   android:textColor="?android:attr/textColorSecondary"
                   android:textSize="12sp"
+                  android:layout_marginRight="8sp"
                   />
               <TextView
                   android:id="@+id/event_time"
