--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
     android:scrollbarAlwaysDrawVerticalTrack="true"
     tools:context=".ui.home.HomeFragment">
 
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
@@ -23,6 +24,34 @@
         android:layout_marginTop="8sp"
         android:layout_marginBottom="8sp"
         />
+    <Button
+        android:id="@+id/chat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="textStart"
+        android:text="Chat"
+        android:textSize="20sp"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="8sp"
+        />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/chat_but"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="textStart"
+        android:text="Chat"
+        android:textSize="20sp"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="8sp"
+        />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/games_recyclerview"
