--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,6 @@
     android:scrollbarAlwaysDrawVerticalTrack="true"
     tools:context=".ui.home.HomeFragment">
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
@@ -22,36 +21,7 @@
         android:text="@string/headline_1"
         android:textSize="20sp"
         android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"
-        />
-    <Button
-        android:id="@+id/chat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="textStart"
-        android:text="Chat"
-        android:textSize="20sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"
-        />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/chat_but"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="textStart"
-        android:text="Chat"
-        android:textSize="20sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"
-        />
-
+        android:layout_marginBottom="8sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/games_recyclerview"
